# StratForge

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  codecov.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/: demo.cast
benchmarks/: CMakeLists.txt  README.md  baselines.json  benchmark_utils.hpp  cold_start_benchmark.cpp  csv_parse_benchmark.cpp  gen_dataset.cpp  indicator_benchmarks.cpp  line_series_benchmark.cpp  memory_benchmarks.cpp  optimization_benchmarks.cpp  order_routing_benchmark.cpp  simd_benchmarks.cpp  strategy_benchmarks.cpp
cmake/: StratForgeConfig.cmake.in
docs/: API_QUICK_START.md
docs/compare/: 001_simd_acceleration.md  002_crtp_indicator_refactoring.md  003_zero_allocation_hot_path.md  TEMPLATE.md
docs/tickets/: TICKET_SF001_COMPREHENSIVE_TEST_COVERAGE.md  TICKET_SF002_OPEN_SOURCE_DISTRIBUTION_AND_PACKAGING.md  TICKET_SF003_OPEN_SOURCE_COMMUNITY_SURFACE.md  TICKET_SF004_PUBLIC_REPO_HYGIENE_AND_ARTIFACT_CLEANUP.md  TICKET_SF005_CROSS_PLATFORM_BUILD_HARDENING.md  TICKET_SF006_CLANG18_LIBCXX_CI_FIX.md
examples/: CMakeLists.txt  README.md  bollinger_bands.cpp  macd_trend.cpp  multi_timeframe.cpp  optimizer_example.cpp  pairs_trading.cpp  rsi_mean_reversion.cpp  sma_crossover.cpp  streaming_run.cpp
examples/llm_generated/: CMakeLists.txt  macd_trailing_stop.cpp  phase3_test_1.cpp  phase3_test_10.cpp  phase3_test_2.cpp  phase3_test_3.cpp  phase3_test_4.cpp  phase3_test_5.cpp  phase3_test_6.cpp  phase3_test_7.cpp  phase3_test_8.cpp  phase3_test_9.cpp  rsi_with_stop.cpp  sma_crossover_with_stop.cpp
include/stratforge/: bar.hpp  stratforge.hpp
include/stratforge/analytics/: extended_metrics.hpp
include/stratforge/analyzers/: analyzer.hpp  drawdown.hpp  returns.hpp  sharpe_ratio.hpp  trade_analyzer.hpp
include/stratforge/broker/: broker.hpp  commission.hpp  order.hpp  position.hpp  sizer.hpp  trade.hpp
include/stratforge/core/: error.hpp  line.hpp  line_series.hpp  params.hpp  period_validate.hpp  transparent_hash.hpp
include/stratforge/data/: csv_data.hpp  data_feed.hpp  in_memory_feed.hpp  replay.hpp  resampler.hpp  timeframe.hpp
include/stratforge/engine/: backtest_runner.hpp  cerebro.hpp  optimizer.hpp
include/stratforge/evaluation/: signal_evaluator.hpp
include/stratforge/indicators/: accum.hpp  adaptive.hpp  aroon.hpp  atr.hpp  average.hpp  avgprice.hpp  awesomeoscillator.hpp  bollinger.hpp  bollingerpct.hpp  bop.hpp  candlestick.hpp  cci.hpp  crossover.hpp  dema.hpp  directionalmovement.hpp  dm_standalone.hpp  dma.hpp  downday.hpp  downmove.hpp  dpo.hpp  dv2.hpp  ema.hpp  envelope.hpp  exponentialsmoothing.hpp  findindex.hpp  hadelta.hpp  heikinashi.hpp  highest.hpp  hilbert.hpp  hma.hpp  hurst.hpp  ichimoku.hpp  indicator.hpp  kama.hpp  kst.hpp  laguerre.hpp  linearreg.hpp  logicaln.hpp  lowest.hpp  macd.hpp  (+52 more)
include/stratforge/observers/: buy_sell.hpp  cash_value.hpp  increment_batcher.hpp  increment_types.hpp  increment_wire.hpp  observer.hpp  value.hpp
include/stratforge/simd/: simd_ops.hpp
include/stratforge/stats/: adf.hpp  garch.hpp  garch11.hpp  hmm.hpp  hmm2.hpp  hurst.hpp  hurst_rs.hpp  result.hpp  result_json.hpp
include/stratforge/strategy/: ai_libero_strategy.hpp  ai_signal_entry_strategy.hpp  entry_signal.hpp  exit_strategy.hpp  observer_strategy.hpp  regime_detector_strategy.hpp  regime_entry_strategy.hpp  signal.hpp  signal_entry_strategy.hpp  strategy.hpp
scripts/: check_perf_regression.sh  prepare_release.sh  release.sh
tests/: CMakeLists.txt  baseline_loader.hpp  golden_reference.hpp  test_advanced_orders.cpp  test_ai_libero_strategy.cpp  test_ai_signal_entry_strategy.cpp  test_analytics_golden.cpp  test_bar.cpp  test_broker.cpp  test_candlestick.cpp  test_cerebro.cpp  test_commission.cpp  test_coverage_broker.cpp  test_coverage_engine.cpp  test_coverage_indicators.cpp  test_data_feed.cpp  test_data_robustness.cpp  test_e2e_integration.cpp  test_exit_strategy.cpp  test_extended_metrics.cpp  test_golden_loader.cpp  test_helpers.hpp  test_in_memory_feed.cpp  test_increment_batcher.cpp  test_increment_batcher_baseline.cpp  test_increment_types.cpp  test_increment_v2_wire_contract.cpp  test_indicator_atr.cpp  test_indicator_basicops.cpp  test_indicator_golden.cpp  test_indicator_more.cpp  test_indicator_phase8.cpp  test_indicator_phase8_advanced.cpp  test_indicator_phase8_final.cpp  test_indicator_phase8_remaining.cpp  test_indicator_phase8_tail.cpp  test_indicator_ticket011.cpp  test_line.cpp  test_mavp.cpp  test_multidata_golden.cpp  (+25 more)
tests/golden/: adxr_p14_2006_day_001.json  aroon_p14_2006_day_001.json  atr_p14_2006_day_001.json  bollinger_p20_2006_day_001.json  cci_p20_2006_day_001.json  crossover_sma10_sma30_2006_day_001.json  csv_2006_day_001.json  demarkpivotpoint_2006_day_001.json  directionalmovement_p14_2006_day_001.json  dv2_p252_ma2_2006_day_001.json  ema_p30_2006_day_001.json  fibonaccipivotpoint_2006_day_001.json  hadelta_p3_2006_day_001.json  heikinashi_2006_day_001.json  hma_p30_2006_day_001.json  hurst_p40_2006_day_001.json  ichimoku_9_26_52_26_26_2006_day_001.json  increment_batcher_sma_cross_1000bar.csv  kst_10_15_20_30_10_10_10_10_9_2006_day_001.json  lagf_g0_5_2006_day_001.json  lrsi_g0_5_2006_day_001.json  macd_12_26_9_2006_day_001.json  macdhisto_12_26_9_2006_day_001.json  meandeviation_p20_2006_day_001.json  ols_slope_intercept_p10_2006_day_001.json  ols_transformation_p10_2006_day_001.json  pivotpoint_2006_day_001.json  psar_p2_2006_day_001.json  rmi_p20_l5_2006_day_001.json  roc_p12_2006_day_001.json  rsi_p14_2006_day_001.json  sma_p30_2006_day_001.json  smma_p14_2006_day_001.json  stddev_p20_2006_day_001.json  stochastic_p14_2006_day_001.json  tsi_25_13_1_2006_day_001.json  ultimateoscillator_7_14_28_2006_day_001.json  vortex_p14_2006_day_001.json  williamsad_2006_day_001.json  willr_p14_2006_day_001.json  (+1 more)
tools/golden_extract/datas/: README.md
(+30 files in other folders)
